feat: add converter method
String -> List<Integer> 형으로 변환하는 기능 추가